correct timen & calculator

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -60,6 +60,10 @@
     </main>
   </div>
 
+  <footer>Created by <a href="https://github.com/Angelpr2807" target="_blank" rel="noopener noreferrer">Angel Perez
+      Ravelo</a> - <a href="https://www.frontendmentor.io/challenges/calculator-app-9lteq5N29" target="_blank"
+      rel="noopener noreferrer">fontend mentor</a></footer>
+
   <script src="./javascript/calculator.js"></script>
 </body>
 
