--- a/tiempo/index.html
+++ b/tiempo/index.html
@@ -41,6 +41,9 @@
   <main class="root">
   </main>
 
+  <footer>Created by <a href="https://github.com/Angelpr2807" target="_blank" rel="noopener noreferrer">Angel Perez
+      Ravelo</a></footer>
+
   <script src="./app/index.js" type="module"></script>
 </body>
 
